--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
   <h1>Integración Continua con Surge 🚀</h1>
+  <h2>Deploy automático funcionando 🔥</h2>
+    <p>¡Hola! Este es un ejemplo de cómo configurar un deploy automático con Surge utilizando GitHub Actions. Cada vez que hagas un push a la rama principal, tu sitio se actualizará automáticamente en Surge.</p>
 </body>
 </html>
